tests/snapshots/cli__without_encryption__an_encrypted_vault_is_recognized_and_refused.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - search
    - "-p"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while listing notes: this vault is encrypted, but this build of ntropy was compiled without encryption support
