tests/snapshots/cli__without_encryption__init_encrypted_reports_the_missing_feature.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - init
    - "--encrypted"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: this build of ntropy was compiled without encryption support (rebuild with `--features encryption`)
