tests/snapshots/cli__without_encryption__unlock_reports_the_missing_feature.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - unlock
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: this build of ntropy was compiled without encryption support (rebuild with `--features encryption`)
